--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -2,11 +2,10 @@
 <div>
     <ul class="heroes">
         <li *ngFor="let hero of heroes">
-            <button [class.selected]="hero === selectedHero" type="button" (click)="onSelect(hero)">
+            <a routerLink="/detail/{{hero.id}}" class="selected">
                 <span class="badge">{{hero.id}}</span>
                 <span class="name">{{hero.name}}</span>
-            </button>
+            </a>
         </li>
     </ul>
-    <app-hero-detail [hero]="selectedHero"></app-hero-detail>
 </div>
